# trajectory_mapper

./: Cargo.toml  README.md  first_improved_map  first_improved_map_reformatted  map_python_dictionary.pest  office_map_march_10  pest_test.out  pest_test_inner.out  points.txt  sort_of_L.txt  straight_points.txt  straightaway.txt  stuck_in_corner.txt  test.out  test_no_obstacle.out  test_no_obstacle_free_space.out  transcript_2025_02_28_14_47_54
examples/: multi_callback_demo.rs
src/: .main.rs.swp  cmd.rs  executor.rs  lib.rs  main.rs  odometry_math.rs  particle_filter.rs  point.rs  search_iter.rs
