[package]
name = "trajectory_mapper"
version = "0.1.0"
edition = "2024"

[dependencies]
r2r = "0.9"
smol = "2"
futures = "0.3"
anyhow = "1"
crossbeam = "0.8"
ctrlc = "3.4"
enum-iterator = "2"
num-traits = "0.2"
trait-set = "0.3"
pancurses = "0.17"
itertools = "0.14.0"
rand = "0.9.0"
bits = {git = "https://github.com/gjf2a/bits"}
distribution_select = {git = "https://github.com/gjf2a/distribution_select"}